Updated the sizing of the spirit logo, and sizing of table to be max width in martial_arts.html.

--- a/css/output.css
+++ b/css/output.css
@@ -879,6 +879,11 @@ video {
      object-fit: contain;
 }
 
+.object-none {
+  -o-object-fit: none;
+     object-fit: none;
+}
+
 .p-1 {
   padding: 0.25rem;
 }
