--- a/css/output.css
+++ b/css/output.css
@@ -825,6 +825,11 @@ video {
   border-color: rgb(28 25 23 / var(--tw-border-opacity));
 }
 
+.border-yellow-50 {
+  --tw-border-opacity: 1;
+  border-color: rgb(254 252 232 / var(--tw-border-opacity));
+}
+
 .bg-dark-gray {
   background-color: #625d5d57;
 }
@@ -887,6 +892,16 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-slate-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 250 252 / var(--tw-bg-opacity));
+}
+
+.bg-light-gray {
+  --tw-bg-opacity: 1;
+  background-color: rgb(228 229 234 / var(--tw-bg-opacity));
+}
+
 .bg-fixed {
   background-attachment: fixed;
 }
@@ -919,6 +934,10 @@ video {
 
 .p-7 {
   padding: 1.75rem;
+}
+
+.p-2 {
+  padding: 0.5rem;
 }
 
 .px-2 {
@@ -1121,6 +1140,20 @@ video {
   background-color: rgb(95 24 35 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-medium-red:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(72 24 31 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-dark-gray-2:hover {
+  background-color: #625d5d99;
+}
+
+.hover\:bg-dark-red:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(48 23 27 / var(--tw-bg-opacity));
+}
+
 .hover\:text-sky-500:hover {
   --tw-text-opacity: 1;
   color: rgb(14 165 233 / var(--tw-text-opacity));
@@ -1134,6 +1167,11 @@ video {
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.group:hover .group-hover\:bg-light-red {
+  --tw-bg-opacity: 1;
+  background-color: rgb(95 24 35 / var(--tw-bg-opacity));
 }
 
 .group:hover .group-hover\:text-sky-600 {
