--- a/css/manual.css
+++ b/css/manual.css
@@ -1,9 +1,9 @@
 /* Manual Styling Sheet for index.html */
 
 
-/* ========== ========== ==========
+/* ========== ========== ========== ========== ==========
 Background CSS
-========== ========== ========== */
+========== ========== ========== ========== ========== */
 /* Landing Page Background */
 .site-index {
     background-image: url("../img/general_textured_background.png");
@@ -15,9 +15,9 @@ Background CSS
 /* Wo Long Background */
 
 
-/* ========== ========== ==========
+/* ========== ========== ========== ========== ==========
 Global CSS
-========== ========== ========== */
+========== ========== ========== ========== ========== */
 .mask {
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5), inset 0 1px 0 0 rgba(255, 255, 255, 0.16);
 }
@@ -37,11 +37,9 @@ th, td {
     border: solid 1px rgba(49, 45, 51, 0.64);
 }
 
-/* 
-========== ========== ========== ========== ==========
+/* ========== ========== ========== ========== ==========
 Back to top button CSS 
-========== ========== ========== ========== ==========
-*/
+========== ========== ========== ========== ========== */
 #back-to-top-button {
     display: none;
     position: fixed;
