--- a/css/output.css
+++ b/css/output.css
@@ -608,6 +608,10 @@ video {
   height: 160px;
 }
 
+.h-\[250px\] {
+  height: 250px;
+}
+
 .h-\[2px\] {
   height: 2px;
 }
@@ -626,22 +630,6 @@ video {
 
 .h-auto {
   height: auto;
-}
-
-.h-\[300px\] {
-  height: 300px;
-}
-
-.h-\[200px\] {
-  height: 200px;
-}
-
-.h-\[250px\] {
-  height: 250px;
-}
-
-.h-\[225px\] {
-  height: 225px;
 }
 
 .min-h-screen {
@@ -667,10 +655,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-auto {
-  width: auto;
 }
 
 .border-collapse {
@@ -725,14 +709,6 @@ video {
 
 .flex-wrap {
   flex-wrap: wrap;
-}
-
-.place-content-end {
-  place-content: end;
-}
-
-.place-items-end {
-  place-items: end;
 }
 
 .items-start {
@@ -935,19 +911,9 @@ video {
      object-fit: contain;
 }
 
-.object-fill {
-  -o-object-fit: fill;
-     object-fit: fill;
-}
-
 .object-none {
   -o-object-fit: none;
      object-fit: none;
-}
-
-.object-scale-down {
-  -o-object-fit: scale-down;
-     object-fit: scale-down;
 }
 
 .p-1 {
@@ -1081,11 +1047,6 @@ video {
   line-height: 1.625;
 }
 
-.text-blue-500 {
-  --tw-text-opacity: 1;
-  color: rgb(59 130 246 / var(--tw-text-opacity));
-}
-
 .text-boss-skill {
   --tw-text-opacity: 1;
   color: rgb(220 113 13 / var(--tw-text-opacity));
@@ -1119,6 +1080,11 @@ video {
 .text-sky-500 {
   --tw-text-opacity: 1;
   color: rgb(14 165 233 / var(--tw-text-opacity));
+}
+
+.text-sky-700 {
+  --tw-text-opacity: 1;
+  color: rgb(3 105 161 / var(--tw-text-opacity));
 }
 
 .text-slate-300 {
@@ -1175,11 +1141,6 @@ video {
   background-color: rgb(72 24 31 / var(--tw-bg-opacity));
 }
 
-.hover\:text-sky-500:hover {
-  --tw-text-opacity: 1;
-  color: rgb(14 165 233 / var(--tw-text-opacity));
-}
-
 .hover\:text-sky-600:hover {
   --tw-text-opacity: 1;
   color: rgb(2 132 199 / var(--tw-text-opacity));
@@ -1193,6 +1154,11 @@ video {
 .group:hover .group-hover\:bg-light-red {
   --tw-bg-opacity: 1;
   background-color: rgb(95 24 35 / var(--tw-bg-opacity));
+}
+
+.group:hover .group-hover\:text-sky-500 {
+  --tw-text-opacity: 1;
+  color: rgb(14 165 233 / var(--tw-text-opacity));
 }
 
 .group:hover .group-hover\:text-sky-600 {
