--- a/css/output.css
+++ b/css/output.css
@@ -562,6 +562,11 @@ video {
   margin-bottom: 1.5rem;
 }
 
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+
 .mb-32 {
   margin-bottom: 8rem;
 }
@@ -1014,6 +1019,11 @@ video {
   padding-bottom: 2rem;
 }
 
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
 .text-left {
   text-align: left;
 }
@@ -1274,6 +1284,11 @@ video {
 }
 
 @media (min-width: 1024px) {
+  .lg\:mx-0 {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
   .lg\:mb-0 {
     margin-bottom: 0px;
   }
@@ -1331,6 +1346,10 @@ video {
     background-size: cover;
   }
 
+  .lg\:p-0 {
+    padding: 0px;
+  }
+
   .lg\:px-0 {
     padding-left: 0px;
     padding-right: 0px;
@@ -1354,10 +1373,6 @@ video {
 
   .xl\:col-end-3 {
     grid-column-end: 3;
-  }
-
-  .xl\:place-self-center {
-    place-self: center;
   }
 }
 
