--- a/css/output.css
+++ b/css/output.css
@@ -1164,6 +1164,11 @@ video {
   color: rgb(250 204 21 / var(--tw-text-opacity));
 }
 
+.text-green-500 {
+  --tw-text-opacity: 1;
+  color: rgb(34 197 94 / var(--tw-text-opacity));
+}
+
 .shadow {
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
@@ -1176,6 +1181,10 @@ video {
 
 .even\:bg-dark-gray-2:nth-child(even) {
   background-color: #625d5d99;
+}
+
+.even\:bg-dark-gray:nth-child(even) {
+  background-color: #625d5d57;
 }
 
 .hover\:bg-gray-600:hover {
