--- a/css/output.css
+++ b/css/output.css
@@ -541,10 +541,6 @@ video {
   z-index: 10;
 }
 
-.m-auto {
-  margin: auto;
-}
-
 .mx-2 {
   margin-left: 0.5rem;
   margin-right: 0.5rem;
@@ -595,6 +591,10 @@ video {
   margin-top: 7rem;
 }
 
+.mt-3 {
+  margin-top: 0.75rem;
+}
+
 .mt-4 {
   margin-top: 1rem;
 }
@@ -605,14 +605,6 @@ video {
 
 .mt-6 {
   margin-top: 1.5rem;
-}
-
-.mb-3 {
-  margin-bottom: 0.75rem;
-}
-
-.mt-3 {
-  margin-top: 0.75rem;
 }
 
 .block {
@@ -698,30 +690,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-\[225px\] {
-  width: 225px;
-}
-
-.w-\[215px\] {
-  width: 215px;
-}
-
-.w-\[210px\] {
-  width: 210px;
-}
-
-.min-w-\[300px\] {
-  min-width: 300px;
-}
-
-.min-w-\[200px\] {
-  min-width: 200px;
-}
-
-.min-w-\[225px\] {
-  min-width: 225px;
 }
 
 .max-w-\[150px\] {
@@ -1099,10 +1067,6 @@ video {
   padding-bottom: 2rem;
 }
 
-.pb-3 {
-  padding-bottom: 0.75rem;
-}
-
 .text-left {
   text-align: left;
 }
@@ -1199,6 +1163,11 @@ video {
   color: rgb(168 85 247 / var(--tw-text-opacity));
 }
 
+.text-rare-text-color {
+  --tw-text-opacity: 1;
+  color: rgb(124 216 255 / var(--tw-text-opacity));
+}
+
 .text-red-500 {
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
@@ -1248,6 +1217,11 @@ video {
   color: transparent;
 }
 
+.text-uncommon-text-color {
+  --tw-text-opacity: 1;
+  color: rgb(252 222 98 / var(--tw-text-opacity));
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -1256,6 +1230,16 @@ video {
 .text-yellow-400 {
   --tw-text-opacity: 1;
   color: rgb(250 204 21 / var(--tw-text-opacity));
+}
+
+.text-exotic-text-color {
+  --tw-text-opacity: 1;
+  color: rgb(210 161 255 / var(--tw-text-opacity));
+}
+
+.text-divine-text-color {
+  --tw-text-opacity: 1;
+  color: rgb(146 249 116 / var(--tw-text-opacity));
 }
 
 .shadow {
