--- a/css/output.css
+++ b/css/output.css
@@ -692,6 +692,14 @@ video {
   width: 100%;
 }
 
+.w-\[75px\] {
+  width: 75px;
+}
+
+.w-\[60px\] {
+  width: 60px;
+}
+
 .max-w-\[150px\] {
   max-width: 150px;
 }
@@ -715,6 +723,12 @@ video {
 .scale-75 {
   --tw-scale-x: .75;
   --tw-scale-y: .75;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.scale-50 {
+  --tw-scale-x: .5;
+  --tw-scale-y: .5;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
