Added more content and finished hidden_skills.html. Added the respective images for weapon, shiftling, ninjutsu, and onmyo_magic icons.

--- a/css/output.css
+++ b/css/output.css
@@ -834,6 +834,10 @@ video {
   border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
 }
 
+.divide-solid > :not([hidden]) ~ :not([hidden]) {
+  border-style: solid;
+}
+
 .divide-gray-100 > :not([hidden]) ~ :not([hidden]) {
   --tw-divide-opacity: 1;
   border-color: rgb(243 244 246 / var(--tw-divide-opacity));
