Updated the classes for the guardian spirits tier list icons in guardian_spirits.html.

--- a/css/output.css
+++ b/css/output.css
@@ -904,6 +904,10 @@ video {
   border-width: 0px;
 }
 
+.border-2 {
+  border-width: 2px;
+}
+
 .border-solid {
   border-style: solid;
 }
@@ -921,6 +925,18 @@ video {
 .border-stone-900 {
   --tw-border-opacity: 1;
   border-color: rgb(28 25 23 / var(--tw-border-opacity));
+}
+
+.border-dark-gray-2 {
+  border-color: #625d5d99;
+}
+
+.border-dark-gray {
+  border-color: #625d5d57;
+}
+
+.border-transparent {
+  border-color: transparent;
 }
 
 .bg-dark-gray {
@@ -1290,6 +1306,37 @@ video {
 
 .even\:bg-dark-gray-2:nth-child(even) {
   background-color: #625d5d99;
+}
+
+.hover\:rounded:hover {
+  border-radius: 0.25rem;
+}
+
+.hover\:border:hover {
+  border-width: 1px;
+}
+
+.hover\:border-4:hover {
+  border-width: 4px;
+}
+
+.hover\:border-2:hover {
+  border-width: 2px;
+}
+
+.hover\:border-blue-500:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(59 130 246 / var(--tw-border-opacity));
+}
+
+.hover\:border-blue-600:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(37 99 235 / var(--tw-border-opacity));
+}
+
+.hover\:border-blue-400:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(96 165 250 / var(--tw-border-opacity));
 }
 
 .hover\:bg-gray-600:hover {
